[package]
name = "directx-sys"
version = "0.0.7"
build = "build.rs"

description = "Rust FFI bindings for the DirectX API"
repository = "https://github.com/Eljay/directx-sys"
documentation = "http://eljay.github.io/directx-sys/directx_sys/index.html"

authors = ["Lee Jeffery <lee@leejeffery.co.uk>"]
license = "MIT"
readme = "README.md"

[dependencies]
bitflags = "0.7.0"
com-rs = "0.2.0"
winapi = "~0.2.0"

[dev-dependencies]
kernel32-sys = "*"
user32-sys = "*"

[features]
default = ["d3d11", "d2d", "dwrite"]
d3d11_3 = ["d3d11_2"]
d3d11_2 = ["d3d11_1", "dxgi1_3"]
d3d11_1 = ["d3d11", "dxgi1_2"]
d3d11 = ["dxgi"]
dxgi1_4 = ["dxgi1_3"]
dxgi1_3 = ["dxgi1_2"]
dxgi1_2 = ["dxgi"]
dxgi = []
d2d = ["dxgi"]
dwrite = []
